# rein

./: .cursorrules  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PLAN.md  README.md  ROADMAP.md  rust_out
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml  validate-action.yml
docs/: comparison.md  editor-setup.md  getting-started.md  integration-guide.md  language-reference.md  language-spec.md  production-readiness.md
editors/vscode/: README.md  language-configuration.json  package.json
examples/: approval-gate.rein  basic.rein  budget_strict.rein  circuit-breaker.rein  code_review.rein  customer_support.rein  data_pipeline.rein  eval_scenarios.rein  hello.rein  invalid.rein  multi_agent.rein  policy-tiers.rein  runtime_basic.rein  safe-agent.rein  workflow.rein
scripts/: README.md  rein-fix.sh  rein-merge.sh  rein-pr.sh  rein-review.sh  rein-task.sh  validate-docs.sh
src/: ast.rs  error.rs  lexer.rs  lib.rs  main.rs  parser.rs  validator.rs
src/ast/: agent.rs  approval.rs  channel.rs  circuit_breaker.rs  consensus.rs  escalate.rs  eval.rs  fleet.rs  import.rs  memory.rs  mod.rs  observe.rs  pipe.rs  policy.rs  provider.rs  scenario.rs  schedule.rs  secrets.rs  tests.rs  types.rs  value.rs  workflow.rs
src/auth/: apikey.rs  mod.rs  namespace.rs  rbac.rs
src/commands/: cost.rs  eval.rs  explain.rs  fmt.rs  init.rs  mod.rs  provider.rs  run.rs  serve.rs  validate.rs
src/config/: mod.rs  tests.rs
src/lexer/: mod.rs  scanner.rs  tests.rs
src/lockfile/: mod.rs  tests.rs
src/lsp/: mod.rs  tests.rs
src/mcp/: mod.rs  tests.rs
src/parser/: agent_parser.rs  approval_parser.rs  approval_tests.rs  channel_parser.rs  circuit_breaker_parser.rs  common_parser.rs  condition_parser.rs  consensus_parser.rs  consensus_tests.rs  eval_parser.rs  eval_parser_tests.rs  fleet_parser.rs  import_parser.rs  memory_parser.rs  memory_parser_tests.rs  mod.rs  observe_parser.rs  pipe_parser.rs  policy_parser.rs  scenario_parser.rs  scenario_tests.rs  schedule_parser.rs  schedule_parser_tests.rs  secrets_parser.rs  secrets_parser_tests.rs  step_ext_tests.rs  step_extensions.rs  step_parser.rs  tests.rs  type_parser.rs  within_parser.rs  workflow_parser.rs
src/runtime/: mod.rs  permissions.rs  tests.rs
src/server/: mod.rs  routes.rs  tests.rs
src/validator/: mod.rs  strict.rs  (+1 more)
tests/: cli.rs  runtime.rs
tree-sitter-rein/: Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py
(+85 files in other folders)
