[package]
name = "rein"
version = "0.1.0"
edition = "2024"
description = "A declarative language and runtime for AI agent orchestration"
license = "MIT"
repository = "https://github.com/delamain-labs/rein"
readme = "README.md"
keywords = ["ai", "agents", "orchestration", "policy", "dsl"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "rein"
path = "src/main.rs"

[lib]
name = "rein"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ariadne = "0.4"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
dotenvy = "0.15"
async-trait = "0.1.89"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Allow these pedantic lints that are too noisy
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
module_name_repetitions = "allow"

[dev-dependencies]
wiremock = "0.6.5"
